--- a/Exercicios/Sistemas Inteligentes/0.2 - Trabalho/0.2 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0.2 - Trabalho/0.2 - Trabalho.ipynb
@@ -2,25 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "source": [
     "from experta import *\r\n",
+    "import math\r\n",
     "\r\n",
     "\r\n",
     "class States(Fact):\r\n",
-    "    nm_State = Field(str, mandatory=True)\r\n",
-    "    nm_Biome = Field(str, mandatory=True)\r\n",
-    "    nm_Climate = Field(str, mandatory=True)\r\n",
-    "    sn_Coast = Field(str, mandatory=True)\r\n",
-    "    sn_Border = Field(str, mandatory=True)\r\n",
-    "    sn_Population = Field(str, mandatory=True)\r\n",
-    "    sn_COVID = Field(str, mandatory=True)\r\n",
-    "    sn_PIB = Field(str, mandatory=True)\r\n",
+    "    nm_Biome = Field(str)\r\n",
+    "    nm_Climate = Field(str)\r\n",
+    "    sn_Coast = Field(str)\r\n",
+    "    sn_Border = Field(str)\r\n",
+    "    sn_Population = Field(str)\r\n",
+    "    sn_COVID = Field(str)\r\n",
+    "    sn_PIB = Field(str)\r\n",
+    "\r\n",
+    "    def Filter_Array(ds_Filter, nr_Index, objArrayEstados):\r\n",
+    "        return list(filter(lambda x: ds_Filter == x[nr_Index], objArrayEstados))\r\n",
     "\r\n",
     "    def Get_Medium_Value(objArrayEstados, nr_Index):\r\n",
     "        objArrayEstados.sort(key=lambda x: x[nr_Index])\r\n",
     "\r\n",
-    "    return objArrayEstados[math.ceil(len(objArrayEstados)/2) - 1][nr_Index] + 1\r\n",
+    "        return objArrayEstados[math.ceil(len(objArrayEstados)/2) - 1][nr_Index] + 1\r\n",
     "\r\n",
     "    def Get_States():\r\n",
     "        return [\r\n",
@@ -71,6 +74,8 @@
     "\r\n",
     "class Classificator(KnowledgeEngine):\r\n",
     "\r\n",
+    "    objArrayEstados = States.Get_States()\r\n",
+    "\r\n",
     "    def Print_State(objArrayEstados):\r\n",
     "        if(len(objArrayEstados) == 1):\r\n",
     "            print('\\n')\r\n",
@@ -84,6 +89,16 @@
     "\r\n",
     "            return input('\\n\\nDeseja continuar identificando outros estados (S/N)?')\r\n",
     "\r\n",
+    "    @Rule(Fact(action='restart'))\r\n",
+    "    def Get_Restart_Question(self):\r\n",
+    "        if(input(\"Deseja identificar outro Estado (S/N)?\") == 'S'):\r\n",
+    "            self.reset()\r\n",
+    "            self.declare(Fact(action='start'))\r\n",
+    "            self.run()\r\n",
+    "        else:\r\n",
+    "            self.declare(Fact(end=True))\r\n",
+    "        \r\n",
+    "\r\n",
     "    @Rule(Fact(action='start'))\r\n",
     "    def Get_Biome_Question(self):\r\n",
     "        print('---------------------------- Biomas ----------------------------\\n')\r\n",
@@ -96,11 +111,20 @@
     "        print('----------------------------------------------------------------\\n')\r\n",
     "        print('\\n')\r\n",
     "\r\n",
-    "        self.declare(nm_Biome=input(\r\n",
-    "            'Qual é o bioma predominante no seu Estado?\\n'))\r\n",
+    "        nm_Biome = input(\r\n",
+    "            'Qual é o bioma predominante no seu Estado?\\n')\r\n",
+    "\r\n",
+    "        self.objArrayEstados = States.Filter_Array(nm_Biome, 1, self.objArrayEstados)\r\n",
+    "\r\n",
+    "        self.declare(States(nm_Biome=nm_Biome))\r\n",
+    "\r\n",
+    "    @Rule(States(nm_Biome='Pampa'))\r\n",
+    "    def Print_Rio_Grande_do_Sul(self):\r\n",
+    "        print('O estado em que você está pensando é o Rio Grande do Sul')\r\n",
+    "        self.declare(Fact(action='restart'))\r\n",
     "\r\n",
     "    @Rule(NOT(States(nm_Biome=W())))\r\n",
-    "    def Get_Climate_Question():\r\n",
+    "    def Get_Climate_Question(self):\r\n",
     "        print('---------------------------- Climas ----------------------------\\n')\r\n",
     "        print('Equatorial')\r\n",
     "        print('Semiárido')\r\n",
@@ -109,13 +133,22 @@
     "        print('----------------------------------------------------------------\\n')\r\n",
     "        print('\\n')\r\n",
     "\r\n",
-    "        self.declare(nm_Climate=input(\r\n",
-    "            'Qual é o clima predominante no seu Estado?\\n'))\r\n",
+    "        nm_Climate = input(\r\n",
+    "            'Qual é o clima predominante no seu Estado?\\n')\r\n",
+    "\r\n",
+    "        self.objArrayEstados = States.Filter_Array(nm_Climate, 2, self.objArrayEstados)\r\n",
+    "\r\n",
+    "        self.declare(nm_Climate=nm_Climate)\r\n",
     "\r\n",
     "    @Rule(AND(NOT(States(nm_Biome=W()), NOT(States(nm_Climate=W())))))\r\n",
     "    def Get_Coast_Question(self):\r\n",
-    "        self.declare(sn_Coast=input(\r\n",
-    "            'Por favor, responda com S ou N se o seu estado é litorâneo:\\n'))\r\n",
+    "\r\n",
+    "        sn_Coast = input(\r\n",
+    "            'Por favor, responda com S ou N se o seu estado é litorâneo:\\n')\r\n",
+    "\r\n",
+    "        self.objArrayEstados = States.Filter_Array(sn_Coast, 3, self.objArrayEstados)\r\n",
+    "\r\n",
+    "        self.declare(sn_Coast=sn_Coast)\r\n",
     "\r\n",
     "    @Rule(AND(\r\n",
     "        NOT(States(nm_Biome=W())),\r\n",
@@ -123,8 +156,13 @@
     "        NOT(States(sn_Coast=W())),\r\n",
     "    ))\r\n",
     "    def Get_Border_Question(self):\r\n",
-    "        self.declare(sn_Border=input(\r\n",
-    "            'Por favor, responda com S ou N se o seu estado é fronteira com algum país:\\n'))\r\n",
+    "\r\n",
+    "        sn_Border = input(\r\n",
+    "            'Por favor, responda com S ou N se o seu estado é fronteira com algum país:\\n')\r\n",
+    "\r\n",
+    "        self.objArrayEstados = States.Filter_Array(sn_Border, 4, self.objArrayEstados)\r\n",
+    "        \r\n",
+    "        self.declare(sn_Border=sn_Border)\r\n",
     "\r\n",
     "    @Rule(AND(\r\n",
     "        NOT(States(nm_Biome=W())),\r\n",
@@ -133,8 +171,14 @@
     "        NOT(States(sn_Border=W())),\r\n",
     "    ))\r\n",
     "    def Get_PIB_Question(self):\r\n",
-    "        self.declare(sn_PIB=input(\r\n",
-    "            'O seu estado tem o PIB maior que {0}?\\n'.format(vl_PIB)))\r\n",
+    "        vl_PIB = States.Get_Medium_Value(self.objArrayEstados, 5)\r\n",
+    "\r\n",
+    "        sn_PIB = input(\r\n",
+    "            'O seu estado tem o PIB maior que {0}?\\n'.format(vl_PIB))\r\n",
+    "\r\n",
+    "        self.objArrayEstados = States.Filter_Array(sn_PIB, 5, self.objArrayEstados)\r\n",
+    "        \r\n",
+    "        self.declare(sn_PIB=sn_PIB)\r\n",
     "\r\n",
     "    @Rule(AND(\r\n",
     "        NOT(States(nm_Biome=W())),\r\n",
@@ -144,8 +188,14 @@
     "        NOT(States(sn_PIB=W())),\r\n",
     "    ))\r\n",
     "    def Get_Population_Question(self):\r\n",
-    "        self.declare(sn_Population=input(\r\n",
-    "            'O seu estado tem a população maior que {0}?\\n'.format(vl_Population)))\r\n",
+    "        vl_Population = States.Get_Medium_Value(self.objArrayEstados, 6)\r\n",
+    "\r\n",
+    "        sn_Population = input(\r\n",
+    "            'O seu estado tem a população maior que {0}?\\n'.format(vl_Population))\r\n",
+    "\r\n",
+    "        self.objArrayEstados = States.Filter_Array(sn_Population, 6, self.objArrayEstados)\r\n",
+    "\r\n",
+    "        self.declare(sn_Population=sn_Population)\r\n",
     "\r\n",
     "    @Rule(AND(\r\n",
     "        NOT(States(nm_Biome=W())),\r\n",
@@ -156,14 +206,23 @@
     "        NOT(States(sn_Population=W())),\r\n",
     "    ))\r\n",
     "    def Get_COVID_Question(self):\r\n",
-    "        self.declare(sn_Covid=input(\r\n",
-    "            'O seu estado teve o número de óbitos por COVID  maior que {0}?\\n'.format(vl_COVID)))\r\n",
+    "        vl_COVID = States.Get_Medium_Value(self.objArrayEstados, 7)\r\n",
+    "\r\n",
+    "        sn_Covid =input(\r\n",
+    "            'O seu estado teve o número de óbitos por COVID  maior que {0}?\\n'.format(vl_COVID))\r\n",
+    "\r\n",
+    "        self.objArrayEstados = States.Filter_Array(sn_Covid, 7, self.objArrayEstados)\r\n",
+    "\r\n",
+    "        self.declare(sn_Covid=sn_Covid)\r\n",
     "\r\n",
     "\r\n",
     "\r\n",
     "engine = Classificator()\r\n",
     "engine.reset()\r\n",
-    "engine.run()\r\n"
+    "\r\n",
+    "engine.declare(Fact(action='start'))\r\n",
+    "\r\n",
+    "engine.run()"
    ],
    "outputs": [
     {
@@ -182,30 +241,32 @@
       "\n",
       "\n",
       "\n",
-      "---------------------------- Climas ----------------------------\n",
+      "O estado em que você está pensando é o Rio Grande do Sul\n",
+      "---------------------------- Biomas ----------------------------\n",
       "\n",
-      "Equatorial\n",
-      "Semiárido\n",
-      "Tropical\n",
-      "Subtropical\n",
+      "Amazonia\n",
+      "Caatinga\n",
+      "Mata Atlântica\n",
+      "Pantanal\n",
+      "Cerrado\n",
+      "Pampa\n",
+      "----------------------------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "O estado em que você está pensando é o Rio Grande do Sul\n",
+      "---------------------------- Biomas ----------------------------\n",
+      "\n",
+      "Amazonia\n",
+      "Caatinga\n",
+      "Mata Atlântica\n",
+      "Pantanal\n",
+      "Cerrado\n",
+      "Pampa\n",
       "----------------------------------------------------------------\n",
       "\n",
       "\n",
       "\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'vl_Population' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-40b42343b426>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    109\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeclare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'start'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 111\u001b[1;33m \u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\experta\\engine.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, steps)\u001b[0m\n\u001b[0;32m    163\u001b[0m                     \", \".join(str(f) for f in activation.facts))\n\u001b[0;32m    164\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 165\u001b[1;33m                 activation.rule(\n\u001b[0m\u001b[0;32m    166\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    167\u001b[0m                     **{k: v\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\experta\\rule.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m     85\u001b[0m                           if k in self._wrapped_args}\n\u001b[0;32m     86\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped_self\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 87\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     88\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped_self\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-18-40b42343b426>\u001b[0m in \u001b[0;36mGet_Population_Question\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     96\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mRule\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAND\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbiome\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclimate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcoast\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mborder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpib\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mGet_Population_Question\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 98\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeclare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulation\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'O seu estado tem a população maior que {0}?\\n'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvl_Population\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    100\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mRule\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAND\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbiome\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclimate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcoast\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mborder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpib\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'vl_Population' is not defined"
      ]
     }
    ],
