--- a/Exercicios/Sistemas Inteligentes/0.2 - Trabalho/0.2 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0.2 - Trabalho/0.2 - Trabalho.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "source": [
     "from experta import *\r\n",
     "import math\r\n",
@@ -97,7 +97,6 @@
     "            self.run()\r\n",
     "        else:\r\n",
     "            self.declare(Fact(end=True))\r\n",
-    "        \r\n",
     "\r\n",
     "    @Rule(Fact(action='start'))\r\n",
     "    def Get_Biome_Question(self):\r\n",
@@ -114,7 +113,8 @@
     "        nm_Biome = input(\r\n",
     "            'Qual é o bioma predominante no seu Estado?\\n')\r\n",
     "\r\n",
-    "        self.objArrayEstados = States.Filter_Array(nm_Biome, 1, self.objArrayEstados)\r\n",
+    "        self.objArrayEstados = States.Filter_Array(\r\n",
+    "            nm_Biome, 1, self.objArrayEstados)\r\n",
     "\r\n",
     "        self.declare(States(nm_Biome=nm_Biome))\r\n",
     "\r\n",
@@ -123,7 +123,7 @@
     "        print('O estado em que você está pensando é o Rio Grande do Sul')\r\n",
     "        self.declare(Fact(action='restart'))\r\n",
     "\r\n",
-    "    @Rule(NOT(States(nm_Biome=W())))\r\n",
+    "    @Rule(AND(States(nm_Biome=W()), NOT(States(nm_Climate=W()))))\r\n",
     "    def Get_Climate_Question(self):\r\n",
     "        print('---------------------------- Climas ----------------------------\\n')\r\n",
     "        print('Equatorial')\r\n",
@@ -136,39 +136,46 @@
     "        nm_Climate = input(\r\n",
     "            'Qual é o clima predominante no seu Estado?\\n')\r\n",
     "\r\n",
-    "        self.objArrayEstados = States.Filter_Array(nm_Climate, 2, self.objArrayEstados)\r\n",
+    "        self.objArrayEstados = States.Filter_Array(\r\n",
+    "            nm_Climate, 2, self.objArrayEstados)\r\n",
     "\r\n",
-    "        self.declare(nm_Climate=nm_Climate)\r\n",
+    "        self.declare(States(nm_Climate=nm_Climate))\r\n",
     "\r\n",
-    "    @Rule(AND(NOT(States(nm_Biome=W()), NOT(States(nm_Climate=W())))))\r\n",
+    "    @Rule(AND(States(nm_Biome=W()),\r\n",
+    "              States(nm_Climate=W()),\r\n",
+    "              NOT(States(sn_Coast=W()))))\r\n",
     "    def Get_Coast_Question(self):\r\n",
     "\r\n",
     "        sn_Coast = input(\r\n",
     "            'Por favor, responda com S ou N se o seu estado é litorâneo:\\n')\r\n",
     "\r\n",
-    "        self.objArrayEstados = States.Filter_Array(sn_Coast, 3, self.objArrayEstados)\r\n",
+    "        self.objArrayEstados = States.Filter_Array(\r\n",
+    "            sn_Coast, 3, self.objArrayEstados)\r\n",
     "\r\n",
-    "        self.declare(sn_Coast=sn_Coast)\r\n",
+    "        self.declare(States(sn_Coast=sn_Coast))\r\n",
     "\r\n",
     "    @Rule(AND(\r\n",
-    "        NOT(States(nm_Biome=W())),\r\n",
-    "        NOT(States(nm_Climate=W())),\r\n",
-    "        NOT(States(sn_Coast=W())),\r\n",
+    "        (States(nm_Biome=W())),\r\n",
+    "        (States(nm_Climate=W())),\r\n",
+    "        (States(sn_Coast=W())),\r\n",
+    "        NOT(States(nm_Border=W()))\r\n",
     "    ))\r\n",
     "    def Get_Border_Question(self):\r\n",
     "\r\n",
     "        sn_Border = input(\r\n",
     "            'Por favor, responda com S ou N se o seu estado é fronteira com algum país:\\n')\r\n",
     "\r\n",
-    "        self.objArrayEstados = States.Filter_Array(sn_Border, 4, self.objArrayEstados)\r\n",
-    "        \r\n",
-    "        self.declare(sn_Border=sn_Border)\r\n",
+    "        self.objArrayEstados = States.Filter_Array(\r\n",
+    "            sn_Border, 4, self.objArrayEstados)\r\n",
+    "\r\n",
+    "        self.declare(States(sn_Border=sn_Border))\r\n",
     "\r\n",
     "    @Rule(AND(\r\n",
-    "        NOT(States(nm_Biome=W())),\r\n",
-    "        NOT(States(nm_Climate=W())),\r\n",
-    "        NOT(States(sn_Coast=W())),\r\n",
-    "        NOT(States(sn_Border=W())),\r\n",
+    "        (States(nm_Biome=W())),\r\n",
+    "        (States(nm_Climate=W())),\r\n",
+    "        (States(sn_Coast=W())),\r\n",
+    "        (States(sn_Border=W())),\r\n",
+    "        NOT(States(sn_PIB=W())),\r\n",
     "    ))\r\n",
     "    def Get_PIB_Question(self):\r\n",
     "        vl_PIB = States.Get_Medium_Value(self.objArrayEstados, 5)\r\n",
@@ -176,16 +183,18 @@
     "        sn_PIB = input(\r\n",
     "            'O seu estado tem o PIB maior que {0}?\\n'.format(vl_PIB))\r\n",
     "\r\n",
-    "        self.objArrayEstados = States.Filter_Array(sn_PIB, 5, self.objArrayEstados)\r\n",
-    "        \r\n",
-    "        self.declare(sn_PIB=sn_PIB)\r\n",
+    "        self.objArrayEstados = States.Filter_Array(\r\n",
+    "            sn_PIB, 5, self.objArrayEstados)\r\n",
+    "\r\n",
+    "        self.declare(States(sn_PIB=sn_PIB))\r\n",
     "\r\n",
     "    @Rule(AND(\r\n",
-    "        NOT(States(nm_Biome=W())),\r\n",
-    "        NOT(States(nm_Climate=W())),\r\n",
-    "        NOT(States(sn_Coast=W())),\r\n",
-    "        NOT(States(sn_Border=W())),\r\n",
-    "        NOT(States(sn_PIB=W())),\r\n",
+    "        (States(nm_Biome=W())),\r\n",
+    "        (States(nm_Climate=W())),\r\n",
+    "        (States(sn_Coast=W())),\r\n",
+    "        (States(sn_Border=W())),\r\n",
+    "        (States(sn_PIB=W())),\r\n",
+    "        NOT(States(sn_Population=W())),\r\n",
     "    ))\r\n",
     "    def Get_Population_Question(self):\r\n",
     "        vl_Population = States.Get_Medium_Value(self.objArrayEstados, 6)\r\n",
@@ -193,28 +202,41 @@
     "        sn_Population = input(\r\n",
     "            'O seu estado tem a população maior que {0}?\\n'.format(vl_Population))\r\n",
     "\r\n",
-    "        self.objArrayEstados = States.Filter_Array(sn_Population, 6, self.objArrayEstados)\r\n",
+    "        self.objArrayEstados = States.Filter_Array(\r\n",
+    "            sn_Population, 6, self.objArrayEstados)\r\n",
     "\r\n",
-    "        self.declare(sn_Population=sn_Population)\r\n",
+    "        self.declare(States(sn_Population=sn_Population))\r\n",
+    "\r\n",
+    "    @Rule(AND(States(nm_Biome='Amazonia'),\r\n",
+    "              States(nm_Climate=\"Equatorial\"),\r\n",
+    "              States(sn_Coast=\"N\"),\r\n",
+    "              States(sn_Border=\"S\"),\r\n",
+    "              States(sn_PIB=\"N\"),\r\n",
+    "              States(sn_Population=\"S\")\r\n",
+    "              ))\r\n",
+    "    def Print_Acre(self):\r\n",
+    "        print('O estado em que você está pensando é o Acre')\r\n",
+    "        self.declare(Fact(action='restart'))\r\n",
     "\r\n",
     "    @Rule(AND(\r\n",
-    "        NOT(States(nm_Biome=W())),\r\n",
-    "        NOT(States(nm_Climate=W())),\r\n",
-    "        NOT(States(sn_Coast=W())),\r\n",
-    "        NOT(States(sn_Border=W())),\r\n",
-    "        NOT(States(sn_PIB=W())),\r\n",
-    "        NOT(States(sn_Population=W())),\r\n",
+    "        (States(nm_Biome=W())),\r\n",
+    "        (States(nm_Climate=W())),\r\n",
+    "        (States(sn_Coast=W())),\r\n",
+    "        (States(sn_Border=W())),\r\n",
+    "        (States(sn_PIB=W())),\r\n",
+    "        (States(sn_Population=W())),\r\n",
+    "        NOT(States(sn_Covid=W())),\r\n",
     "    ))\r\n",
     "    def Get_COVID_Question(self):\r\n",
     "        vl_COVID = States.Get_Medium_Value(self.objArrayEstados, 7)\r\n",
     "\r\n",
-    "        sn_Covid =input(\r\n",
+    "        sn_Covid = input(\r\n",
     "            'O seu estado teve o número de óbitos por COVID  maior que {0}?\\n'.format(vl_COVID))\r\n",
     "\r\n",
-    "        self.objArrayEstados = States.Filter_Array(sn_Covid, 7, self.objArrayEstados)\r\n",
+    "        self.objArrayEstados = States.Filter_Array(\r\n",
+    "            sn_Covid, 7, self.objArrayEstados)\r\n",
     "\r\n",
-    "        self.declare(sn_Covid=sn_Covid)\r\n",
-    "\r\n",
+    "        self.declare(States(sn_Covid=sn_Covid))\r\n",
     "\r\n",
     "\r\n",
     "engine = Classificator()\r\n",
@@ -222,7 +244,7 @@
     "\r\n",
     "engine.declare(Fact(action='start'))\r\n",
     "\r\n",
-    "engine.run()"
+    "engine.run()\r\n"
    ],
    "outputs": [
     {
@@ -241,32 +263,32 @@
       "\n",
       "\n",
       "\n",
-      "O estado em que você está pensando é o Rio Grande do Sul\n",
-      "---------------------------- Biomas ----------------------------\n",
+      "---------------------------- Climas ----------------------------\n",
       "\n",
-      "Amazonia\n",
-      "Caatinga\n",
-      "Mata Atlântica\n",
-      "Pantanal\n",
-      "Cerrado\n",
-      "Pampa\n",
+      "Equatorial\n",
+      "Semiárido\n",
+      "Tropical\n",
+      "Subtropical\n",
       "----------------------------------------------------------------\n",
       "\n",
       "\n",
       "\n",
-      "O estado em que você está pensando é o Rio Grande do Sul\n",
-      "---------------------------- Biomas ----------------------------\n",
-      "\n",
-      "Amazonia\n",
-      "Caatinga\n",
-      "Mata Atlântica\n",
-      "Pantanal\n",
-      "Cerrado\n",
-      "Pampa\n",
-      "----------------------------------------------------------------\n",
-      "\n",
-      "\n",
-      "\n"
+      "[['Maranhão', 'Amazonia', 'Equatorial', 'S', 'N', 98179, 7153262, 10106]]\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-a7e753963b44>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    241\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeclare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'start'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    242\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 243\u001b[1;33m \u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\experta\\engine.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, steps)\u001b[0m\n\u001b[0;32m    163\u001b[0m                     \", \".join(str(f) for f in activation.facts))\n\u001b[0;32m    164\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 165\u001b[1;33m                 activation.rule(\n\u001b[0m\u001b[0;32m    166\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    167\u001b[0m                     **{k: v\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\experta\\rule.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m     85\u001b[0m                           if k in self._wrapped_args}\n\u001b[0;32m     86\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped_self\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 87\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     88\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped_self\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-23-a7e753963b44>\u001b[0m in \u001b[0;36mGet_Population_Question\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    194\u001b[0m     ))\n\u001b[0;32m    195\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mGet_Population_Question\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 196\u001b[1;33m         \u001b[0mvl_Population\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStates\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGet_Medium_Value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobjArrayEstados\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    197\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    198\u001b[0m         sn_Population = input(\n",
+      "\u001b[1;32m<ipython-input-23-a7e753963b44>\u001b[0m in \u001b[0;36mGet_Medium_Value\u001b[1;34m(objArrayEstados, nr_Index)\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mobjArrayEstados\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnr_Index\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobjArrayEstados\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mceil\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjArrayEstados\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnr_Index\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mGet_States\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
