Finsihed neural network homework

--- a/Exercicios/Computação Natural/Neural Network/NC - Gabriel dos Santos Sereno - Atividades (PSO) - 2021/3/nn-ga-breast-cancer.ipynb
+++ b/Exercicios/Computação Natural/Neural Network/NC - Gabriel dos Santos Sereno - Atividades (PSO) - 2021/3/nn-ga-breast-cancer.ipynb
@@ -147,7 +147,7 @@
     "\n",
     "mutation_percent_genes = 10 # Percentage of genes to mutate. This parameter has no action if the parameter mutation_num_genes exists.\n",
     "\n",
-    "parent_selection_type = \"sss\" # Type of parent selection. steady-state selection - Melhores individuos sempre selecionados\n",
+    "parent_selection_type = \"sss\" # Type of parent selection.\n",
     "\n",
     "crossover_type = \"single_point\" # Type of the crossover operator.\n",
     "\n",
