Fixing parameters in PSO-NN algorthims

--- a/Exercicios/Computação Natural/Neural Network/nn-pso-breast-cancer.ipynb
+++ b/Exercicios/Computação Natural/Neural Network/nn-pso-breast-cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "outputs": [
     {
      "name": "stdout",
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "outputs": [],
    "source": [
     "n_inputs = 30\n",
     "n_hidden = 60\n",
     "n_classes = 2\n",
     "\n",
-    "num_samples = 569"
+    "num_samples = 426"
    ],
    "metadata": {
     "collapsed": false,
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "def logits_function(p, X):\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "# Forward propagation\n",
@@ -105,16 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "def Get_PSO(f):\n",
     "    # Initialize swarm\n",
-    "    options = {'c1': 0.5, 'c2': 0.3, 'w':0.9}\n",
+    "    options = {'c1': 2.05, 'c2': 2.05, 'w':0.4}\n",
     "\n",
     "    # Call instance of PSO\n",
     "    dimensions = (n_inputs * n_hidden) + (n_hidden * n_classes) + n_hidden + n_classes\n",
-    "    optimizer = ps.single.GlobalBestPSO(n_particles=100, dimensions=dimensions, options=options)\n",
+    "    optimizer = ps.single.GlobalBestPSO(n_particles=20, dimensions=dimensions, options=options)\n",
     "\n",
     "    # Perform optimization\n",
     "    cost, pos = optimizer.optimize(f, iters=1000)\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "def predict(pos, X):\n",
@@ -146,13 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn import preprocessing\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -178,17 +179,18 @@
     "    target = data['diagnosis']\n",
     "    data = datas.values\n",
     "\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(data, target)\n",
+    "\n",
     "    def f(x):\n",
     "        n_particles = x.shape[0]\n",
-    "        j = [forward_prop(x[i], data, target) for i in range(n_particles)]\n",
+    "        j = [forward_prop(x[i], x_train, y_train) for i in range(n_particles)]\n",
     "        return np.array(j)\n",
     "\n",
     "    pos = Get_PSO(f)\n",
-    "    scores = (predict(pos, data) == target)\n",
+    "    scores = (predict(pos, x_test) == y_test)\n",
     "\n",
     "    print(\"\\n Breast Cancer \\n\")\n",
-    "    print(\"Mean: \", scores.mean())\n",
-    "    print(\"Standard Deviation: \", scores.std())"
+    "    print(\"Mean: \", scores.mean())"
    ],
    "metadata": {
     "collapsed": false,
@@ -199,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-07 19:56:27,539 - pyswarms.single.global_best - INFO - Optimize for 1000 iters with {'c1': 0.5, 'c2': 0.3, 'w': 0.9}\n",
-      "pyswarms.single.global_best: 100%|██████████|1000/1000, best_cost=0.00117\n",
-      "2022-03-07 20:00:41,170 - pyswarms.single.global_best - INFO - Optimization finished | best cost: 0.001173978044435302, best pos: [ 0.00121391  0.77827621 -0.02452137 ...  0.87295118  0.33045454\n",
-      "  0.13013272]\n"
+      "2022-03-25 13:45:12,669 - pyswarms.single.global_best - INFO - Optimize for 1000 iters with {'c1': 2.05, 'c2': 2.05, 'w': 0.4}\n",
+      "pyswarms.single.global_best: 100%|██████████|1000/1000, best_cost=0.0594\n",
+      "2022-03-25 13:45:25,615 - pyswarms.single.global_best - INFO - Optimization finished | best cost: 0.059415299374059496, best pos: [ 0.64009079 -3.42539846  0.36011326 ... -0.0063296   1.84164899\n",
+      "  0.36513498]\n"
      ]
     },
     {
@@ -218,10 +220,7 @@
       "\n",
       " Breast Cancer \n",
       "\n",
-      "Mean:  1.0\n",
-      "Standard Deviation:  0.0\n",
-      "Min:  True\n",
-      "Max:  True\n"
+      "Mean:  0.986013986013986\n"
      ]
     }
    ],
