--- a/Exercicios/Computação Natural/Neural Network/nn-pso-iris.ipynb
+++ b/Exercicios/Computação Natural/Neural Network/nn-pso-iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 233,
    "outputs": [
     {
      "name": "stdout",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 234,
    "outputs": [],
    "source": [
     "n_inputs = 4\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 235,
    "outputs": [],
    "source": [
     "def logits_function(p, X):\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 236,
    "outputs": [],
    "source": [
     "# Forward propagation\n",
@@ -105,12 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 237,
    "outputs": [],
    "source": [
     "def Get_PSO(f):\n",
     "    # Initialize swarm\n",
-    "    options = {'c1': 2.05, 'c2': 2.05, 'w': 2.05 * 0.729}\n",
+    "    options = {'c1': 2.05, 'c2': 2.05, 'w': 0.3}\n",
     "\n",
     "    # Call instance of PSO\n",
     "    dimensions = (n_inputs * n_hidden) + (n_hidden * n_classes) + n_hidden + n_classes\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 238,
    "outputs": [],
    "source": [
     "def predict(pos, X):\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 239,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -154,8 +154,9 @@
     "from sklearn import preprocessing\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "from sklearn.model_selection import train_test_split\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "\n",
     "labelencoder = LabelEncoder()\n",
     "\n",
@@ -163,6 +164,10 @@
     "    data = pd.read_csv('databases/iris.data', names = ['sepal length', 'sepal width', 'petal length', 'petal width', 'class'])\n",
     "    target = labelencoder.fit_transform(data['class'].values)\n",
     "    data = data.drop('class', axis = 1).values\n",
+    "\n",
+    "    sc = StandardScaler()\n",
+    "    data = sc.fit_transform(data)\n",
+    "\n",
     "    x_train, x_test, y_train, y_test = train_test_split(data, target)\n",
     "\n",
     "    def f(x):\n",
@@ -174,8 +179,7 @@
     "    scores = (predict(pos, x_test) == y_test)\n",
     "\n",
     "    print(\"\\n Iris \\n\")\n",
-    "    print(\"Mean: \", scores.mean())\n",
-    "    print(\"Standard Deviation: \", scores.std())\n"
+    "    print(\"Accuracy: %.2f%%\" % (100 * np.mean(scores)))"
    ],
    "metadata": {
     "collapsed": false,
@@ -186,55 +190,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 240,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-21 08:08:24,791 - pyswarms.single.global_best - INFO - Optimize for 1000 iters with {'c1': 0.5, 'c2': 0.3, 'w': 0.9}\n",
-      "pyswarms.single.global_best: 100%|██████████|1000/1000, best_cost=2.11e-13\n",
-      "2022-03-21 08:08:38,744 - pyswarms.single.global_best - INFO - Optimization finished | best cost: 2.1138547261874334e-13, best pos: [ 1.15845102e+00  1.19011022e-01 -1.42770492e+00  9.67014447e-02\n",
-      "  1.64960449e+00  9.76479872e-01  4.23261772e+00  8.84748721e-01\n",
-      "  1.54034374e+00  4.75452477e-01 -3.17933614e+00 -7.19183701e+00\n",
-      " -1.37851314e+00  1.10329063e+00 -2.64800403e+00  5.47366858e+00\n",
-      " -7.22497463e+00  7.10024579e-01 -5.04866470e-01  3.65825445e+00\n",
-      "  1.98005788e+00 -1.06277762e+00 -9.54339852e-01  1.27701909e+00\n",
-      "  1.67922063e-01  9.09030683e-01  1.32794051e+00  1.20919244e+00\n",
-      "  6.26334705e-01 -1.86844983e+00 -9.75902221e+00  5.39861844e-01\n",
-      "  1.52988555e+00 -1.38178418e+00  1.55710456e-01 -1.16108476e+00\n",
-      " -1.38778222e+00 -1.31308056e+00  1.58953219e+00  2.27327585e-01\n",
-      "  5.86983583e-01 -8.83188859e-01  3.00115216e+00  5.24467159e-01\n",
-      "  1.12610072e+00 -1.73031351e+00 -4.00248090e-01 -3.37183328e-01\n",
-      " -8.66081536e-01  9.38319952e-01 -1.19883556e+00  3.79230184e-02\n",
-      "  2.98767972e+00  8.28633342e-02 -2.41031349e+00 -2.46061425e-01\n",
-      " -2.50722118e+00  1.91605056e+00 -7.88059191e-01  2.34181067e-01\n",
-      "  1.84517789e-01 -3.75048489e+00  1.70252534e+00  4.78399787e-01\n",
-      "  3.07706780e-01 -1.40405581e+00 -1.32293211e+00  9.57946125e-01\n",
-      " -2.96448926e-01  2.02776988e-01 -2.06324597e+00 -1.85033430e+00\n",
-      " -1.46214538e+00  1.57860649e+00  9.56508347e-01  1.11867232e+00\n",
-      "  2.90403791e+00  3.99217378e-01 -3.55749304e-01  4.00458037e-01\n",
-      " -3.41872756e+00  8.00207804e-01  6.31066338e-01 -2.08030224e+00\n",
-      "  1.36923076e+00  2.18403566e+00 -4.07798614e+00 -1.54514474e-01\n",
-      "  8.86939818e-01 -1.83663052e+00 -1.31783433e+00 -2.09698652e+00\n",
-      " -3.17104785e+00  3.41228990e-01  6.70321750e-01  2.44006164e+00\n",
-      " -1.91567308e+00 -4.24313838e-01  4.62561768e-02  5.90070430e-01\n",
-      "  1.35013406e-01  4.08185363e-01 -4.28293183e-01 -8.67525127e-01\n",
-      "  1.25757341e+00  1.71041060e+00 -2.97050649e+00 -3.93382325e-01\n",
-      " -6.21264372e-01 -2.26978006e-01 -1.97909990e+00  1.00340508e+00\n",
-      " -1.98935211e+00 -1.81283136e+00  2.39943642e+00 -9.99942517e-01\n",
-      "  2.37828381e+00 -7.06801879e+02  6.90489362e+00  6.82982300e-02\n",
-      " -1.18012771e-01 -1.72784323e-02  1.26039834e+00  2.37245895e-02\n",
-      "  1.10489948e+00  2.97487077e+00  2.52193541e+00 -1.10871880e+00\n",
-      "  2.42706467e-01  2.73462416e+00  4.00082218e+00 -1.12945845e+00\n",
-      " -1.14615632e-01  2.31147900e-01 -3.04179730e-01 -3.49326887e-01\n",
-      " -1.40023054e+00  4.26496294e+00  1.09258520e+00  2.19753537e-01\n",
-      "  8.04244448e-01  5.31433829e-01 -1.07036989e+00 -1.10501627e-01\n",
-      " -4.83143556e+00  1.60529860e+00 -1.09056494e+00 -9.80753766e-03\n",
-      " -1.79315021e-01 -2.40643772e-01 -3.28599259e-02  1.63491054e-01\n",
-      " -3.83735844e-01 -3.67461978e+00  7.49245854e+01 -1.06996580e+01\n",
-      " -2.92553860e-01  1.46370370e-01 -1.35453811e-01 -1.08879425e+00\n",
-      " -1.75724019e+00 -1.22517361e+00 -2.45336791e+00]\n"
+      "2022-03-25 13:39:03,647 - pyswarms.single.global_best - INFO - Optimize for 1000 iters with {'c1': 2.05, 'c2': 2.05, 'w': 0.3}\n",
+      "pyswarms.single.global_best: 100%|██████████|1000/1000, best_cost=0.00298\n",
+      "2022-03-25 13:39:06,837 - pyswarms.single.global_best - INFO - Optimization finished | best cost: 0.0029848305292933357, best pos: [-1.18307257e+00  8.08837216e+00  7.34947393e-01  8.54152247e-03\n",
+      " -1.82157458e+00  3.87804614e+00  8.43515572e-01  2.49026358e+00\n",
+      "  2.55805664e-01  1.79553664e+00 -9.17922829e+00  7.07700472e-01\n",
+      "  1.99477885e+00  2.92821390e-01  1.16680272e+00 -9.35953145e-01\n",
+      "  2.75307402e+00 -1.26321580e+00  8.57603312e-01  6.17356555e-01\n",
+      "  2.75251983e-01  6.62744678e-02 -4.98173609e-01  3.41492146e+00\n",
+      " -3.51253661e-01  1.92662285e-02 -2.30342416e-01  1.57220346e+01\n",
+      "  2.34787057e+01  1.17896281e+00  2.16996255e+00 -6.69041231e-01\n",
+      "  1.96616249e+00  1.07137949e+00 -2.94176776e+00  2.10688891e-01\n",
+      "  9.83225678e-01 -8.04537353e-01  4.09876173e-01  1.50855695e+00\n",
+      "  6.12373008e-01 -1.46258140e-01  1.43422385e+00 -2.36297753e-01\n",
+      "  4.01743298e-01  2.32103728e+00 -8.78418746e-01  6.78549191e-01\n",
+      "  9.11329811e-01  1.07217726e+00  1.10349324e+00  1.16979620e+00\n",
+      "  7.01004760e-01  1.59591482e+00  7.08951897e+00  1.59340284e+00\n",
+      "  1.11098395e+00  2.69935404e+00 -1.48039453e+00  1.10988442e+00\n",
+      "  1.94914518e+00  9.11397058e-01  1.73320081e+00  5.96143657e-01\n",
+      "  2.43596209e+00  9.55549852e-01 -3.02847437e-01 -4.25562226e+04\n",
+      " -1.58987849e-01  2.16768991e+00 -8.12149657e-01  7.31880564e-01\n",
+      "  2.06198596e+00  2.84653417e+00 -5.48716467e-01  5.35328509e-01\n",
+      " -9.24852962e-01 -7.41485410e-03  1.50342878e+00  1.00125391e+00\n",
+      " -1.52816968e+00  6.68933263e-02  1.18462069e+00 -2.43638731e-01\n",
+      "  1.04500714e+00  1.49372536e+00  1.10374357e+01  5.42099616e-01\n",
+      "  1.86214133e+00  5.38369762e-01  1.01214794e+00 -1.36631887e+00\n",
+      " -4.91539634e-01 -3.46092983e+00  2.98148133e+00 -5.38995949e-01\n",
+      "  4.75957806e-02  3.52867195e-01 -1.06156267e-01 -3.14343718e+00\n",
+      "  1.43905026e+00 -1.16597074e+00  1.37996878e-01 -1.38581398e+00\n",
+      "  1.13943276e+00  1.24358904e+00 -1.65464537e+01  7.34360235e-01\n",
+      " -2.57939957e+00  4.35340290e-01  2.23574022e+00  6.77881691e-02\n",
+      " -6.45648817e+00  1.97592856e+00  2.17253102e-01  9.62831028e-01\n",
+      "  2.15665418e+00  8.81486416e-01  1.26021445e+00  7.89070655e-01\n",
+      "  9.20849290e-01  8.50180845e-02  9.74268029e-01  2.95941480e-01\n",
+      "  4.97232911e-01  2.34709578e+00  1.05937852e+00 -1.01158140e+00\n",
+      "  1.68315035e+00  5.05024917e-01  2.70778042e+00  1.34545981e+00\n",
+      "  6.24493764e-01  1.07476075e+00 -6.58901578e+00  3.85133810e+00\n",
+      "  9.85418662e-01 -1.37141920e+00  1.41360283e+00 -1.17924930e-01\n",
+      "  4.80951826e-01  6.77387912e-01  4.25218033e-01  2.15163743e+00\n",
+      " -4.91569600e-02 -3.97813171e+00 -6.42529283e+00  9.40283524e+00\n",
+      "  3.88484278e-01  2.72380069e+00  9.62144123e-01  4.29916604e-01\n",
+      "  9.89520360e-01  2.49004892e+00 -1.19831169e+00  1.88434713e+00\n",
+      "  1.64659364e+00 -5.11260963e-02 -1.37045305e+00  5.54308234e-01\n",
+      " -9.14497504e-01  1.87380195e+00  9.88511479e-01]\n"
      ]
     },
     {
@@ -244,8 +248,7 @@
       "\n",
       " Iris \n",
       "\n",
-      "Mean:  0.9736842105263158\n",
-      "Standard Deviation:  0.16007269816574266\n"
+      "Accuracy: 97.37%\n"
      ]
     }
    ],
